--- a/index.html
+++ b/index.html
@@ -172,24 +172,24 @@
 </section>
 <section class="section__revolut">
     <div class="container">
-        <div class="revolut__wrapper">
-            <div class="revolut__content">
+        <div class="section__revolut__wrapper">
+            <div class="section__revolut__content">
                 <p class="revolut__text">“Lokalise has turned a task we were dreading into an absolute pleasure. Great platform, intuitive UX, powerful API. The automatic text recognition for screenshots has been a lifesaver, and over-the-air updates are the icing on the cake.”</p>
                 <p class="revolut__man__name">Edward Cooper, Chief Mobile Officer</p>
-                <img src="./image/logorevolut.png" alt="Logo Revolut" class="revolut__logo">
+                <div class="revolut__logo"><img src="./image/logorevolut.png" alt="Logo Revolut"></div>
             </div>
-            <img src="./image/man.png" alt="Man" class="revolut__img">
+            <div class="section__revolut__img"><img src="./image/man.png" alt="Man"></div>
         </div>
     </div>
 </section>
 <section class="section__software">
     <div class="container">
-        <div class="software__wrapper">
-            <img src="./image/cake.png" alt="Cake" class="software__cake">
+        <div class="section__software__wrapper">
+            <div class="software__cake"><img src="./image/cake.png" alt="Cake"></div>
             <h3 class="software__title">The most-loved translation management software</h3>
             <div class="software__line"></div>
-            <img src="./image/users.png" alt="Users love us" class="software__users">
-            <img src="./image/highest.png" alt="Highest" class="software__highest">
+            <div class="software__users"><img src="./image/users.png" alt="Users love us"></div>
+            <div class="software__highest"><img src="./image/highest.png" alt="Highest"></div>
         </div>
     </div>
 </section>
