Add buttons, make new corner on a product.

--- a/index.html
+++ b/index.html
@@ -195,18 +195,18 @@
 </section>
 <section class="section__integrate">
     <div class="container">
-        <div class="integrate__wrapper">
-            <h4 class="integrate__title">Integrate Lokalise with your work tools</h4>
+        <div class="section__integrate__wrapper">
+            <h4 class="title__h2">Integrate Lokalise with your work tools</h4>
             <p class="integrate__text">Automate processes, eliminate routine tasks, and track progress with ease.</p>
-            <img src="./image/bird.png" alt="Birds" class="integrate__img">
+            <div class="integrate__img"><img src="./image/bird.png" alt="Birds"></div>
             <a href="/" class="integrate__button">See all integrations</a>
         </div>
     </div>
 </section>
 <section class="section__easy">
     <div class="container">
-        <div class="easy__wrapper">
-            <h4 class="easy__title">Localization made easy. Why wait?</h4>
+        <div class="section__easy__wrapper">
+            <h4 class="title__h2">Localization made easy. Why wait?</h4>
             <p class="easy__text">Try for free or let us show you how it works.</p>
             <a href="/" class="easy__button">Try it free</a>
         </div>
