Add buttons, make new corner on a product.

--- a/index.html
+++ b/index.html
@@ -217,56 +217,56 @@
         <div class="section__footer__wrapper">
             <div class="footer__content">
                 <h3 class="footer__title">Case Studies</h3>
-                <img src="./image/bicycles.png" alt="Bicycles" class="footer__content__img">
-                <img src="./image/footerspecialized.png" alt="Specialized" class="footer__content__logo">
+                <div class="footer__content__img"><img src="./image/bicycles.png" alt="Bicycles"></div>
+                <div class="footer__content__logo"><img src="./image/footerspecialized.png" alt="Specialized"></div>
                 <p class="footer__content__text">Riding towards global success with a 100% teammate enthusiasm</p>
                 <a href="/" class="footer__content__link">Read more</a>
             </div>
             <div class="footer__menu">
                 <div class="footer__menu__block">
                     <h5 class="footer__menu__title">Product</h5>
-                    <a href="" class="footer__menu__link">For developers</a>
-                    <a href="" class="footer__menu__link">For managers</a>
-                    <a href="" class="footer__menu__link">For translators</a>
-                    <a href="" class="footer__menu__link">For designers</a>
-                    <a href="" class="footer__menu__link">Integrations</a>
-                    <a href="" class="footer__menu__link">Security</a>
-                    <a href="" class="footer__menu__link">Pricing</a>
-                    <a href="" class="footer__menu__link">Automations</a>
+                    <a href="" class="footer__menu__block__link">For developers</a>
+                    <a href="" class="footer__menu__block__link">For managers</a>
+                    <a href="" class="footer__menu__block__link">For translators</a>
+                    <a href="" class="footer__menu__block__link">For designers</a>
+                    <a href="" class="footer__menu__block__link">Integrations</a>
+                    <a href="" class="footer__menu__block__link">Security</a>
+                    <a href="" class="footer__menu__block__link">Pricing</a>
+                    <a href="" class="footer__menu__block__link">Automations</a>
                 </div>
                 <div class="footer__menu__block">
                     <h5 class="footer__menu__title">Support</h5>
-                    <a href="" class="footer__menu__link">Contact</a>
-                    <a href="" class="footer__menu__link">Documentation</a>
-                    <a href="" class="footer__menu__link">Status</a>
-                    <a href="" class="footer__menu__link">Product Updates</a>
-                    <a href="" class="footer__menu__link">CLI Tool</a>
-                    <a href="" class="footer__menu__link">API Reference</a>
-                    <a href="" class="footer__menu__link">iOS and Android SDK</a>
-                    <a href="" class="footer__menu__link">Supported File Formats</a>
+                    <a href="" class="footer__menu__block__link">Contact</a>
+                    <a href="" class="footer__menu__block__link">Documentation</a>
+                    <a href="" class="footer__menu__block__link">Status</a>
+                    <a href="" class="footer__menu__block__link">Product Updates</a>
+                    <a href="" class="footer__menu__block__link">CLI Tool</a>
+                    <a href="" class="footer__menu__block__link">API Reference</a>
+                    <a href="" class="footer__menu__block__link">iOS and Android SDK</a>
+                    <a href="" class="footer__menu__block__link">Supported File Formats</a>
                 </div>
                 <div class="footer__menu__block">
                     <h5 class="footer__menu__title">Company</h5>
-                    <a href="" class="footer__menu__link">About</a>
-                    <a href="" class="footer__menu__link">Blog</a>
-                    <a href="" class="footer__menu__link">Careers | We`re Hiring</a>
-                    <a href="" class="footer__menu__link">Case Studies</a>
-                    <a href="" class="footer__menu__link">Media Kit</a>
+                    <a href="" class="footer__menu__block__link">About</a>
+                    <a href="" class="footer__menu__block__link">Blog</a>
+                    <a href="" class="footer__menu__block__link">Careers | We`re Hiring</a>
+                    <a href="" class="footer__menu__block__link">Case Studies</a>
+                    <a href="" class="footer__menu__block__link">Media Kit</a>
                 </div>
                 <div class="footer__menu__block">
                     <h5 class="footer__menu__title">Legal</h5>
-                    <a href="" class="footer__menu__link">Terms of Service</a>
-                    <a href="" class="footer__menu__link">Privacy Policy</a>
-                    <a href="" class="footer__menu__link">Cookie Policy</a>
-                    <a href="" class="footer__menu__link">Privacy Shield</a>
-                    <a href="" class="footer__menu__link">DPA</a>
-                    <a href="" class="footer__menu__link">List of Sub-processors</a>
-                    <a href="" class="footer__menu__link">Candidates Privacy <br>Notice</a>
+                    <a href="" class="footer__menu__block__link">Terms of Service</a>
+                    <a href="" class="footer__menu__block__link">Privacy Policy</a>
+                    <a href="" class="footer__menu__block__link">Cookie Policy</a>
+                    <a href="" class="footer__menu__block__link">Privacy Shield</a>
+                    <a href="" class="footer__menu__block__link">DPA</a>
+                    <a href="" class="footer__menu__block__link">List of Sub-processors</a>
+                    <a href="" class="footer__menu__block__link">Candidates Privacy <br>Notice</a>
                 </div>
             </div>
             <div class="footer__line"></div>
             <div class="footer__footer">
-                <img src="./image/footerlokalise.png" alt="lokalise" class="footer__footer__logo">
+                <div class="footer__footer__logo"><img src="./image/footerlokalise.png" alt="lokalise"></div>
                 <p class="footer__footer__text">Localization workflow for your web and mobile <br> apps, games and digital content.</p>
                 <p class="footer__footer__info">©2001-2020 <br>All rights reserved.</p>
             </div>
